<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_report">Report</string>
    <string name="urlbar_hint">Search or enter address</string>
    <string name="teaser">Automatic private browsing.\nBrowse. Erase. Repeat.</string>
    <string name="search_hint">Search for %1$s</string>
    <string name="menu_share">Share…</string>
    <string name="menu_open_with_default_browser">Open with %1$s</string>
    <string name="menu_open_with_a_browser">Open with…</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="menu_whats_new">What\'s New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_rate_app">Rate us 5*, please!</string>
    <string name="menu_trackers_blocked_title">Ads and trackers blocked</string>
    <string name="share_dialog_title">Share via</string>
    <string name="notification_erase_text">Erase browsing history</string>
    <string name="notification_action_open">Open</string>
    <string name="notification_action_erase_and_open">Erase and Open</string>
    <string name="shortcut_erase_short_label">Erase</string>
    <string name="shortcut_erase_long_label">Erase browsing history</string>
    <string name="text_selection_search_action">Search Privately</string>
    <string name="about_content"><![CDATA[
<p>%1$s puts you in control.</p>
<p>Use it as a private browser:
  <ul>
    <li>Search and browse right in the app</li>
    <li>Block trackers (or update settings to allow trackers)</li>
    <li>Erase to delete cookies as well as search and browsing history</li>
  </ul>
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
<a href="%2$s">Learn more</a></p>
    ]]></string>
    <string name="preference_category_search">Search</string>
    <string name="preference_search_engine_default">Default</string>
    <string name="preference_subitem_autocomplete">Autocomplete</string>
    <string name="preference_switch_autocomplete">Autocomplete</string>
    <string name="preference_category_autocomplete_preinstalled">Pre-installed</string>
    <string name="preference_category_autocomplete_custom">Custom URL</string>
    <string name="preference_autocomplete_subitem_customlist">Custom URLs</string>
    <string name="preference_autocomplete_action_add">+ Add custom URL</string>
    <string name="preference_autocomplete_title_add">Add custom URL</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_systemdefault">System default</string>
    <string name="preference_dialog_title_search_engine">Default search</string>
    <string name="preference_category_privacy">Privacy</string>
    <string name="preference_privacy_block_ads">Block ad trackers</string>
    <string name="preference_privacy_block_ads_summary">Some ads track site visits, even if you don’t click the ads</string>
    <string name="preference_privacy_block_analytics">Block analytic trackers</string>
    <string name="preference_privacy_block_analytics_summary">Used to collect, analyze and measure activities like tapping and scrolling</string>
    <string name="preference_privacy_block_social">Block social trackers</string>
    <string name="preference_privacy_block_social_summary">Embedded on sites to track your visits and to display functionality like share buttons</string>
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_privacy_secure_mode">Stealth</string>
    <string name="preference_privacy_stealth_summary">Hide webpages when switching apps</string>
    <string name="preference_category_performance">Performance</string>
    <string name="preference_performance_block_webfonts">Block Web fonts</string>
    <string name="preference_performance_block_webfonts_summary">May result in missing icons or images</string>
    <string name="preference_performance_block_images">Block images</string>
    <string name="preference_default_browser2">Make %1$s default browser</string>
    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>
    <string name="preference_mozilla_telemetry_summary">Learn more</string>
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_privacy_notice">Privacy Notice</string>
    <string name="preference_about">About %1$s</string>
    <string name="preference_search_installed_search_engines">Installed search engines</string>
    <string name="preference_search_restore">Restore default search engines</string>
    <string name="preference_search_add2">+ Add another search engine</string>
    <string name="preference_search_remove_title">Remove search engines</string>
    <string name="preference_search_remove">Remove</string>
    <string name="tutorial_search_manually_add">Manually add</string>
    <string name="tutorial_search_title">Add search engine</string>
    <string name="tutorial_search_step1">1. Go to the search engine homepage.</string>
    <string name="tutorial_search_step2">2. Tap into the search engine’s search field.</string>
    <string name="tutorial_search_step2_alternative">2. Long press the search engine’s search field.</string>
    <string name="tutorial_search_step3">3. Tap the magnifying glass icon above the keyboard to add the search engine.</string>
    <string name="action_option_add_search_engine">Add search engine</string>
    <string name="tutorial_search_step3_alternative">3. Tap %1$s</string>
    <string name="tutorial_search_step4">4. If you don’t see the magnifying glass, try manually adding a search engine.</string>
    <string name="tutorial_search_step4_alternative">4. If you don’t see %1$s, try manually adding a search engine.</string>
    <string name="tutorial_search_finish">GET STARTED</string>
    <string name="search_add_hint">Tap the magnifying glass icon above the keyboard to add this search engine.</string>
    <string name="search_add_manually_name">Name to display</string>
    <string name="search_add_manually_name_hint">Search engine name</string>
    <string name="search_add_manually_string">Search string to use</string>
    <string name="search_add_manually_save">Save</string>
    <string name="search_add_manually_string_hint">Paste or enter search string. If necessary, replace search term with: %s.</string>
    <string name="search_add_manually_example">Example: example.com/search/?q=%s</string>
    <string name="accessibility_announcement_search">Add search engine</string>
    <string name="search_add_confirmation">New search engine added.</string>
    <string name="search_add_error">Check the search string and try again</string>
    <string name="content_description_clear_input">Clear input</string>
    <string name="content_description_voice_input">Voice input</string>
    <string name="content_description_dismiss_input">Dismiss</string>
    <string name="content_description_erase">Erase browsing history</string>
    <string name="content_description_fab_expand">Expand</string>
    <string name="content_description_tab_counter">Tabs open: %1$s</string>
    <string name="content_description_open_tab">Open tab</string>
    <string name="content_description_close_tab">Close tab</string>
    <string name="content_description_lock">Secure connection</string>
    <string name="accessibility_announcement_loading">Loading</string>
    <string name="accessibility_announcement_loading_finished">Website loaded</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_back">Navigate back</string>
    <string name="content_description_stop">Stop loading website</string>
    <string name="content_description_customtab_exit">Return to previous app</string>
    <string name="content_description_blocking_switch">Block trackers</string>
    <string name="content_description_downloadmedia">Download video/music</string>
    <string name="context_menu_paste_go">Paste &amp; Go</string>
    <string name="your_rights">Your Rights</string>
    <string name="external_app_prompt_title">Open link in another app</string>
    <string name="external_app_prompt">You can leave %1$s to open this link in %2$s.</string>
    <string name="external_app_prompt_no_app_title">Find an app that can open link</string>
    <string name="external_app_prompt_no_app">None of the apps on your device are able to open this link. You can leave %1$s to search %2$s for an app that can.</string>
    <string name="external_multiple_apps_matched_exit">Exit Private Browsing?</string>
    <string name="download_snackbar_finished">%1$s finished</string>
    <string name="download_snackbar_open">Open</string>
    <string name="download_dialog_warning"><![CDATA[Downloaded files <b>will not be deleted</b> when you erase %1$s history.]]></string>
    <string name="download_dialog_title">Download File</string>
    <string name="download_dialog_action_cancel">Cancel</string>
     <string name="download_dialog_action_download">Download</string>
    <string name="errorpage_title">Problem loading page</string>
    <string name="errorpage_refresh">Try Again</string>
    <string name="error_connectionfailure_title">Unable to connect</string>
    <string name="error_connectionfailure_message">
    <![CDATA[
      <ul>
        <li>The site could be temporarily unavailable or too busy. Try again in a few moments.</li>
        <li>If you are unable to load any pages, check your mobile device’s data or Wi-Fi connection.</li>
      </ul>
    ]]>
    </string>
    <string name="error_connect_title">@string/error_connectionfailure_title</string>
    <string name="error_connect_message">@string/error_connectionfailure_message</string>
    <string name="error_timeout_title">The connection timed out</string>
    <string name="error_timeout_message">@string/error_connectionfailure_message</string>
    <string name="error_hostLookup_title">Server not found</string>
    <string name="error_hostLookup_message"><![CDATA[
      <ul>
        <li>Check the address for typing errors such as
          <strong>ww</strong>.example.com instead of
          <strong>www</strong>.example.com</li>
        <li>If you are unable to load any pages, check your device’s data or Wi-Fi connection.</li>
      </ul>
    ]]></string>
    <string name="error_malformedURI_title">The address isn’t valid</string>
    <string name="contextmenu_link_share">Share link</string>
    <string name="contextmenu_link_copy">Copy link address</string>
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <string name="mediaparser_bottomsheet_title">Video/Music downloader</string>
    <string name="mediaparser_no_result">We did not find any video/music file.</string>
    <string name="mediaparser_youtube_warning">We do not support to download video from Youtube due to policy of Google.</string>
    <string name="delete">Delete</string>
    <string name="open_website">Open website</string>
    <string name="tabs_tray_action_signout">Logout of all websites</string>
    <string name="tabs_tray_action_newtab">Open new blank tab</string>
    <string name="tabs_tray_action_incognito">Incognito mode</string>
</resources>