<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_open"
        android:title="@string/download_snackbar_open" />

    <item
        android:id="@+id/menu_open_website"
        android:title="@string/open_website" />

    <item
        android:id="@+id/menu_share_link"
        android:title="@string/contextmenu_link_share" />

    <item
        android:id="@+id/menu_copy_link"
        android:title="@string/contextmenu_link_copy" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete" />
</menu>