<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/floating_action_button_margin"
        android:layout_marginEnd="@dimen/floating_action_button_margin"
        android:layout_marginStart="@dimen/floating_action_button_margin"
        android:clickable="true"
        android:focusable="true"
        android:elevation="16dp"
        style="@style/CardView.Light">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sessions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="56dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="start|center_vertical"
            android:layout_gravity="bottom"
            android:weightSum="3">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/signOutButtonView"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_signout"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tabs_tray_action_signout"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/newTabButtonView"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_newtab"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tabs_tray_action_newtab"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/incognitoButtonView"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_incognito_normal"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tabs_tray_action_incognito"/>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/progressOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>
