<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:clipChildren="false">

        <View
            android:id="@+id/toolbarBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_primary" />

        <FrameLayout
            android:id="@+id/urlInputContainerView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:clipChildren="false">

            <View
                android:id="@+id/urlInputBackgroundView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/urlbar_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/searchEnginesView"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:padding="0dp"
                    android:spinnerMode="dropdown"
                    android:background="@android:color/transparent"/>

                <com.xlab.vbrowser.widget.InlineAutocompleteEditText
                    android:id="@+id/urlView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/urlbar_hint"
                    android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
                    android:background="@android:color/transparent"
                    android:inputType="textUri"
                    android:lines="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginEnd="10dp"
                    android:requiresFadingEdge="horizontal"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorTextActive"
                    android:textColorHighlight="?android:attr/colorAccent"
                    android:textColorHint="@color/colorTextInactive"
                    android:textSize="15sp"
                    android:textCursorDrawable="@drawable/cursor"
                    android:importantForAutofill="no"
                    tools:targetApi="o" /><!-- importantForAutofill is only supported on Android O+ -->

                <ImageButton
                    android:id="@+id/voiceView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_voice"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="end"
                    style="?android:attr/borderlessButtonStyle"
                    android:contentDescription="@string/content_description_voice_input"/>

                <ImageButton
                    android:id="@+id/clearView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_clear"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    style="?android:attr/borderlessButtonStyle"
                    android:contentDescription="@string/content_description_clear_input" />

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

    <View
        android:id="@+id/dismissView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:contentDescription="@string/content_description_dismiss_input" />

    <com.xlab.vbrowser.widget.ResizableKeyboardCoordinatorLayout
        android:id="@+id/searchViewContainer"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        app:animate = "true">
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/searchScrollView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <TextView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_search_white"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:lines="1"
                        android:text="Hello World!"
                        android:ellipsize="end"
                        android:textSize="14sp"
                        android:textColor="@color/searchHintTextColor"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingBottom="10dp"/>

                    <View
                        android:id="@+id/searchSeperator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#33ffffff"
                        android:layout_marginBottom="10dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/searchSuggestionView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </com.xlab.vbrowser.widget.ResizableKeyboardCoordinatorLayout>

</FrameLayout>